responsive behvior update 3

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 
         <div class="text1">
           <h1>Rayan Araujo</h1>
-          <h3>Gamedev, programmer and Asset<h3>
-          <h3>Store publisher</h3>
+          <h3>Gamedev, programmer and Asset Store publisher<h3>
         </div>
 
         <div class="products_indicator_home" href="#products">
