--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <!--<link rel="icon" href="images/favicon.png" type="image/gif" />
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-
-  <title>Test</title>
-
   <!-- font awesome style -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="css/style.css" rel="stylesheet" />
 
+  <link rel="icon" href="favicon.ico" type="image/gif" />
+  <title>Rayan Araujo</title>
 </head>
 
 <body>
 
   <!-- navbar -->
   <header>
-    <img class = "logo" src="assets/R2.png" alt="logo">
+    <img class = "logo" src="assets/r-logo2.png" alt="logo">
     <div class="div_spc1"></div>
       <nav class="nav_links">
         <ul class="nav_bar">
