responsive changes and add custombars doc

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
           <li class="list-item">
             <i class="icons fa-regular fa-envelope">
               <span class="contact-text gmail">
-                <a href="mailto:#" target="_blank" title="Send me an email">
-                  hitmeup@gmail.com</a>
+                <a href="mailto:contact@rayanaraujo.com.br" target="_blank" title="Send me an email">
+                  contact@rayanaraujo.com.br</a>
                 </span>
               </i>
             </li>
@@ -155,8 +155,8 @@
            <li class="list-item">
             <i class="icons fa-regular fa-comments">
               <span class="contact-text gmail">
-                <a href="mailto:#" target="_blank" title="Send me an email">
-                  support@name.com
+                <a href="mailto:support@rayanaraujo.com.br" target="_blank" title="Send me an email">
+                  support@rayanaraujo.com.br
                 </a>
               </span>
             </i>
