update doc page

--- a/documentation/custombars/index.html
+++ b/documentation/custombars/index.html
@@ -549,7 +549,7 @@ public class Implementation_Test2 : MonoBehaviour
                                     <br>
                                         <p>
                                             Thanks for adquiring Custombars!<br>
-                                            I'd like to invite you to give your feedback by reviewing this asset at Asset Store, so I can keep improving it and adding new stuff in upcoming updates.
+                                            If possible, please review this asset in Asset Store, your feedback is important, this way I can keep improving this package and adding new stuff in upcoming updates.
                                         </p>
 
                                     <br>
