--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
           <li class="list-item">
             <i class="icons fa-brands fa-x-twitter">
               <span class="contact-text X">
-                <a href="https://twitter.com/Rayan_Arauj" target="_blank" title="Checkout my X!">
-                  @Rayan_Arauj</a>
+                <a href="https://twitter.com/Ray_Gamedev" target="_blank" title="Checkout my X!">
+                  @Ray_Gamedev</a>
                 </span>
               </i>
             </li>
