--- a/documentation/custombars/index.html
+++ b/documentation/custombars/index.html
@@ -141,11 +141,11 @@
                                 <h2 class="section-title">Requirements</h2>
                                 <div class="section-block">
                                     <p>
-                                        To utilize CustomBars asset effectively, ensure that you meet the following basic requirements:
+                                        To utilize CustomBars asset properly, ensure that you meet the following basic requirements:
                                         <ul>
                                             <li><b>Unity Installation</b> - Unity Engine must be installed on your system. It is recommended to use the version <b>2022.3.13</b> or above, since it's the version that the asset was developed. Previous versions might work aswell, but CustomBars has not yet been tested in them yet. </li>
                                             <li><b>Canvas gameobject</b> - Because it's a UI element, Custombars will only appear on screen if placed inside of a canvas gameobject in hierarchy. If you don't have a Canvas gameobject yet, just right click on an empty space in hierarchy - or in the "<b>+</b>" button in the upper left corner of the hierarchy window > "<b>UI</b>" > "<b>Canvas</b>".</li>
-                                            <li><b>A gameobject with Script</b> - To be able to interact with CustomBars, you'll need to have a Unity Project with at least one gameobject with a C# script attached to it, and inside of the script you can make a reference of the bar you want to use, this way you'll be able to interact with the built-in functions of the bars. Check the <a href="#workflow-section">Workflows section</a> for more information on how to incorporate custombars in your project.</li>
+                                            <li><b>A gameobject with Script</b> - To be able to interact with CustomBars, you'll need to have a Unity Project with at least one gameobject with a C# script attached to it. Inside of the script you can make a reference of the bar you want to use, this way you'll be able to interact with the built-in functions of the bars. Check the <a href="#workflow-section">Workflows section</a> for more information on how to incorporate custombars in your project.</li>
                                         </ul>
                                     </p>
                                 </div>
@@ -353,7 +353,7 @@ public class Implementation_Test2 : MonoBehaviour
                             <section id="advanced-section" class="doc-section">
                                 <h2 class="section-title">Advanced</h2>
                                 <div class="section-block">
-                                    <h6>Custombar scripts funcionality</h6>
+                                    <h6>Custombar scripts functionality</h6>
                                     <p>The code of each script of Custombar is organized into four main sections of functions, for ease of understanding. Each of the 7 variations might have their own differences like extra functions and variables, but they still follow the same structure:</p>
                                     <ol>
 
@@ -481,7 +481,7 @@ public class Implementation_Test2 : MonoBehaviour
 
                                         <br>
                                         <li>
-                                            <p>If needed, change the scale and position of the new sprite using the scene to fit it properly. Adjust the color by using the Color Variables in the Inspector with the custombar focused in Hierarchy.</p>
+                                            <p>If necessary, change the scale and position of the new sprite using the scene to fit it properly. Adjust the color by using the Color Variables in the Inspector with the custombar focused in Hierarchy.</p>
                                             <img class="image diy4-example" src="assets/images/diy4.png" alt="package-contents">
                                         </li>
  
@@ -499,7 +499,7 @@ public class Implementation_Test2 : MonoBehaviour
                                         <li><b>Create a GameObject</b> - Right-click in the Hierarchy window and select "Create Empty" or duplicate an existing one within the hierarchy of the CustomBar you want to add new stuff.</li>
                                         <li><b>Add an Image Component</b> - Select the new GameObject, click "Add Component" in the Inspector window, search for "Image," and add the Image component - skip this step if you already duplicated a gameobject that has an Image component on it.</li>
                                         <li><b>Create a new Sprite</b> - Import an image you want to use as sprite for your new element, make sure to set it as <code>Sprite (2D and UI)</code> by selecting it, and changing it's <b>Texture Type</b> in the Inspector, then applying the change.</li>
-                                        <li><b>Assign the sprite to the Image Component</b> - Drag the Sprite from the Project window onto the sprite container of the Image Component in the Inspector Window. (Be sure to drag the <b>sprite</b>, not the image itself - the sprite normally is under the image hierarchy</li>
+                                        <li><b>Assign the sprite to the Image Component</b> - Drag the Sprite from the Project window onto the sprite container of the Image Component in the Inspector Window. (Be sure to drag the <b>sprite</b>, not the image itself - the sprite is usually under the image hierarchy</li>
                                             <img class="image sprite-example" src="assets/images/sprite.png" alt="package-contents">
                                         
                                         <li><b>Adjust position and size</b> - Use the scene view position and scale controls to fit the new gameobject in the bar. To adjust the color, select the gameobject, and search for the <b>Color</b> variable inside of the <b>Image Component.</b></li>
@@ -536,7 +536,7 @@ public class Implementation_Test2 : MonoBehaviour
                                 <div class="section-block">
                                     <br>
                                         <p>
-                                            If you have any questions, comments, bur reports, or suggestions regarding CustomBars, please feel free to contact me at <a href="mailto:contact@rayanaraujo.com.br">contact@rayanaraujo.com.br</a>
+                                            If you have any questions, comments, bug reports, or suggestions regarding CustomBars, please feel free to contact me at <a href="mailto:contact@rayanaraujo.com.br">contact@rayanaraujo.com.br</a>
                                         </p>
 
                                     <br>
@@ -549,7 +549,7 @@ public class Implementation_Test2 : MonoBehaviour
                                 <div class="section-block">
                                     <br>
                                         <p>
-                                            Thanks for adquiring Custombars!<br>
+                                            Thanks for acquiring Custombars!<br>
                                             If possible, please review this asset in Asset Store, your feedback is important, this way I can keep improving this package and adding new stuff in upcoming updates.
                                         </p>
 
