--- a/documentation/custombars/index.html
+++ b/documentation/custombars/index.html
@@ -639,6 +639,10 @@ public class Implementation_Test2 : MonoBehaviour
 	                                     <a class="nav-link scrollto" href="#requirements-section">Requirements</a>
                                     </li>
 
+                                     <li class="nav-item">
+	                                    <a class="nav-link scrollto" href="#demon-scene-controls-section">Demo Scene Controls</a>
+                                    </li>
+
 
                                     <li class="nav-item">
 	                                    <a class="nav-link scrollto" href="#workflows-section">Workflows</a>
