added demo scene image

--- a/documentation/custombars/index.html
+++ b/documentation/custombars/index.html
@@ -99,7 +99,7 @@
 
                                     <img class="image package-content" src="assets/images/installation.png" alt="installation">
                                     <br></br>
-                                    <p><b>The easiest way to import an asset from Asset Store is by using Unity's Package Manager window:</b></p>
+                                    <p>The easiest way to import an asset from Asset Store is by using Unity's Package Manager window:</p>
                                         <div class="col-md-6 col-12">
                                             <ol class="list">
                                               <li><b>Open the "Window" menu on Unity menu bar at the top.</b></li>
@@ -155,13 +155,16 @@
                             <section id="demon-scene-controls-section" class="doc-section">
                                 <h2 class="section-title">Demo Scene Controls</h2>
                                 <div class="section-block">
+                                    <img class="image demo-controls" src="assets/images/demo-controls.png" alt="demo-controls" style="width: 40%; height: auto;">
                                     <p>
-                                       The demo scene showcases the functionality of Custombars’ through interactive controls. Follow these instructions to utilize the controls effectively: 
+                                       
+                                       The demo scene showcases the functionality of Custombars’ through interactive controls. <br>Follow these instructions to utilize the controls effectively: 
+                                    </p>
                                         <ol>
                                             <li><b>Slider control:</b>
                                                 <ul>
-                                                    <li>Horizontal slider that ranges from 0 to 500 by default</li>
-                                                    <li>Drag the slider knob left or right to adjust the value displayed on your custom bars in real-time.</li>
+                                                    <li>Horizontal slider that ranges from 0 to 500 by default. You can change this range by clicking in the 'Slider' GameObject that is inside of 'Controls' GameObject in the Hierarchy, then, in the Inspector, find the Slider Component and set the 'Min Value' and 'Max Value' as you wish. </li>
+                                                    <li>Drag the slider knob left or right to change the custombars' current values in real-time.</li>
                                                 </ul>
                                             </li>
                                             <li><b>Button controls: </b>
