--- a/documentation/custombars/index.html
+++ b/documentation/custombars/index.html
@@ -141,11 +141,18 @@
                                 <div class="section-block">
                                     <p>
                                         To utilize CustomBars asset properly, ensure that you meet the following basic requirements:
-                                        <ul>
+                                        <ol>
                                             <li><b>Unity Installation</b> - Unity Engine must be installed on your system. It is recommended to use the version <b>2022.3.13</b> or above, since it's the version that the asset was developed. Previous versions might work aswell, but CustomBars has not yet been tested in them yet. </li>
+                                            <li><b>Gameobject with Script</b> - For obvious reasons, to make usage of Custombars you'll need an Unity Project with a scene, and at least one gameobject and a C# script attached to it for interacting with the bars prefabs. Check the <a href="#workflow-section">Workflows section</a> for more information on how to incorporate custombars into your project. <br>
                                             <li><b>Canvas gameobject</b> - Because it's a UI element, Custombars will only appear on screen if placed inside of a canvas gameobject in hierarchy. If you don't have a Canvas gameobject yet, just right click on an empty space in hierarchy - or in the "<b>+</b>" button in the upper left corner of the hierarchy window > "<b>UI</b>" > "<b>Canvas</b>".</li>
-                                            <li><b>A gameobject with Script</b> - To be able to interact with CustomBars, you'll need to have a Unity Project with at least one gameobject with a C# script attached to it. Inside of the script you can make a reference of the bar you want to use, this way you'll be able to interact with the built-in functions of the bars. Check the <a href="#workflow-section">Workflows section</a> for more information on how to incorporate custombars in your project.</li>
-                                        </ul>
+                                            <li><b>TextMeshPro package</b> - Some GameObjects make use of TextMeshPro component from the TextMeshPro Package. <br>
+                                                You can install it for free inside of the Unity Editor by using the Package Manager, just like in the <a href="#installation-section">Installation</a> part: 
+                                                <ul><li>Inside of Unity, at the top menu bar, click <b>Window</b> > <b>Package Manager</b>.</li></ul>
+                                                <ul><li>Select the dropdown menu <b>Packages: In Project</b> and change it to <b>Packages: Unity Registry</b>.</li></ul>
+                                                <ul><li>In the <b>search bar</b> on the right side, search for "<b>TextMeshPro</b>".</li></ul>
+                                                <ul><li>Select the package on the left side and click in the <b>Download</b> button.</li></ul>
+                                                <ul><li>Wait for the download to complete, then import the package by clicking in the <b>Import</b> button.</li></ul></li>
+                                        </ol>
                                     </p>
                                 </div>
                            </section><!--//doc-section-->
