added link to store

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <h3>AVAILABLE NOW</h3>
           <img class="separator"src="assets/awesome_detail.png">
 
-          <a href="https://www.google.com" target="_blank">
+          <a href="https://assetstore.unity.com/packages/2d/gui/ray-s-custombars-283709" target="_blank">
             <img class="unity_button" src="assets/unity_button.png">
           </a>
         </div>
